--- a/寫在讀《資本論》之前.md
+++ b/寫在讀《資本論》之前.md
@@ -1,2 +1,20 @@
 # 寫在讀《資本論》之前
 
+最近有一種強烈的感召，要我去讀馬克思的資本論。好像生活中不停出現各式各樣的sign，要我去開展這一章。但我卻一直遲疑。
+我期待以久，卻且敬且畏。
+然而緣份生起，任由直覺引領，我即張開始讀這一充滿爭議性的鉅著。
+當我走近知識的深淵，準備一躍而下，此時心中忽有一聲呼喚。
+不。
+我不可以就此開始。
+就算不存在所謂充分的準備，也不代表可以毫無準備。假使我要赤手空拳走進巨人的領域，我最少要為自己留一張底牌。
+## 存檔
+
+最重要的問題，應該是甚麼我想讀資本論。
+但我更認為在此以前，更重要的，是我的立場。
+我無法簡單展述何以將立場
+
+我手上有三本關於資本論的書，一本是法國人寫，一本是台灣人寫，一本是日本人寫。
+分別是：
+沙灘上的克思-生活中的資本論 by Jean-Numa Ducange
+資本論完全使用手冊 by 萬毓澤
+圖解資本論 by 
