--- a/寫在讀《資本論》之前.md
+++ b/寫在讀《資本論》之前.md
@@ -7,14 +7,28 @@
 不。
 我不可以就此開始。
 就算不存在所謂充分的準備，也不代表可以毫無準備。假使我要赤手空拳走進巨人的領域，我最少要為自己留一張底牌。
-## 存檔
 
-最重要的問題，應該是甚麼我想讀資本論。
-但我更認為在此以前，更重要的，是我的立場。
-我無法簡單展述何以將立場
+### 資源
 
 我手上有三本關於資本論的書，一本是法國人寫，一本是台灣人寫，一本是日本人寫。
 分別是：
-沙灘上的克思-生活中的資本論 by Jean-Numa Ducange
+沙灘上的馬克思-生活中的資本論 by Jean-Numa Ducange
 資本論完全使用手冊 by 萬毓澤
-圖解資本論 by 
+圖解資本論 by 久桓啟一
+
+然後我近日向一位本地哲學學者請教，他推介了一本認受性比較高的著作：
+跟著大衛．哈維讀資本論 by David Harvey
+以地理學的基礎重構克思的資本論，在學界有著很高的認受性。
+
+現在簡單比較一下四本書，以及我的決擇。
+《資本論完全使用手冊》以及《圖解資本論》並不會作為我認識馬克思資本論的開端，前者我翻閱過，認為過於艱澀，尤其是對很多資本論中發明的專有名詞直接挪用，沒有作出解釋，作者也表示這書是給看過資本論的人去深入研究；
+後者過於簡化，我大致看得懂，但我無法確認它所表達的是否和原著有太大差異，然而我覺得在看過原著後，圖解版或有潛質作為濃縮筆記。
+
+有幸得到了《跟著大衛．哈維讀資本論》的電子版，快速略讀過後認為此書在我能力範圍之內。加上他本身的地位，以及面向大眾的定位，我已經把它列為認識資本論的必讀著作。不過，依然不是我決定要第一本讀的資本論相關著作。
+
+我最後決定了第一本開始讀的，是《沙灘上的馬克思-生活中的資本論》，主因是因為它並定位於解釋甚麼是資本論，而是想從一個比較客觀的角度去令讀者認識馬克思(以及資本論)，至少作者是有意這樣做。而且文筆沒有太嚴肅，也代表我可以用更快的節奏去完成，之後就可以開始看David Harvey，也為我去認識資本論打了一個相對客觀的底。
+
+### 存檔
+
+最重要的問題，應該是甚麼我想讀資本論。
+但我更認為在此以前，更重要的，是我的立場。
